--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/wetoolaguer/portal-client.git"
   },
   "dependencies": {
       "request": "2.22.0",
