Adds email to package.json [f:30s]

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "mocha" : "*",
       "nock" : "*"
   },
-  "author": "Weto Olaguer <wenceslaoolaguer@gmail.com>",
+  "author": "Weto Olaguer",
+  "email": "wenceslaoolaguer@gmail.com",
   "license": ""
 }
