--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portal-client",
   "version": "0.1.0",
-  "description": "",
+  "description": "This is portal-client.",
   "main": "./bin/client",
   "scripts": {
     "test": "make test"
