--- a/package.json
+++ b/package.json
@@ -17,6 +17,5 @@
       "nock" : "*"
   },
   "author": "Weto Olaguer",
-  "email": "wenceslaoolaguer@gmail.com",
-  "license": ""
+  "email": "wenceslaoolaguer@gmail.com"
 }
